--- a/examples/TypeaheadTokenizer-simple.html
+++ b/examples/TypeaheadTokenizer-simple.html
@@ -48,7 +48,7 @@
       <script type="text/jsx">
         /** @jsx React.DOM */
         React.render(
-          <ReactTypeahead.Tokenizer defaultValue="foo"
+          <ReactTypeahead.Tokenizer initialValue="foo"
             name="spamselect"
             options={
               ["foobar", "spameggs", "hameggs",
